--- a/pom.xml
+++ b/pom.xml
@@ -32,13 +32,14 @@
 
   <properties>
     <upstream.version>5.15.10</upstream.version>
-    <activemq-karaf.features.tesb.version>5.15.10.tesb3</activemq-karaf.features.tesb.version>
+    <activemq-karaf.features.tesb.version>5.15.10.tesb4</activemq-karaf.features.tesb.version>
     <activemq-web-console.tesb.version>5.15.10.tesb1</activemq-web-console.tesb.version>
     <activemq-client.tesb.version>5.15.10.tesb1</activemq-client.tesb.version>
     <activemq-osgi.tesb.version>5.15.10.tesb1</activemq-osgi.tesb.version>
     <activemq-broker.tesb.version>5.15.10.tesb1</activemq-broker.tesb.version>
 
     <jackson.tesb.version>2.11.4</jackson.tesb.version>
+    <xstream-bundle.tesb.version>1.4.16_1</xstream-bundle.tesb.version>
 
     <activeio-version>3.1.4</activeio-version>
     <siteId>activemq-${upstream.version}</siteId>
