--- a/activemq-web-console/pom.xml
+++ b/activemq-web-console/pom.xml
@@ -231,7 +231,7 @@
     <dependency>
       <groupId>${project.groupId}</groupId>
       <artifactId>activemq-console</artifactId>
-      <version>${project.version}</version>
+      <version>${upstream.version}</version>
     </dependency>
     <dependency>
       <groupId>org.apache.activemq</groupId>
