--- a/pom.xml
+++ b/pom.xml
@@ -41,6 +41,7 @@
     <activemq-karaf.features.tesb.version>5.15.14.tesb1</activemq-karaf.features.tesb.version>
     <jackson.tesb.version>2.11.4</jackson.tesb.version>
     <jackson.databind.tesb.version>2.11.4</jackson.databind.tesb.version>
+    <xstream-bundle.tesb.version>1.4.16_1</xstream-bundle.tesb.version>
 
     <!-- JAR dependency versions -->
     <activemq-protobuf-version>1.1</activemq-protobuf-version>
@@ -1167,6 +1168,7 @@
               <activemq-karaf.features.tesb.version>${activemq-karaf.features.tesb.version}</activemq-karaf.features.tesb.version>
               <jackson.tesb.version>${jackson.tesb.version}</jackson.tesb.version>
               <jackson.databind.tesb.version>${jackson.databind.tesb.version}</jackson.databind.tesb.version>
+              <xstream-bundle.tesb.version>${xstream-bundle.tesb.version}</xstream-bundle.tesb.version>
             </properties>
           </configuration>
           <executions>
