--- a/activemq-web-console/pom.xml
+++ b/activemq-web-console/pom.xml
@@ -29,8 +29,10 @@
   <packaging>war</packaging>
   <name>ActiveMQ :: Web Console</name>
   <description>Web Console for ActiveMQ</description>
+  <version>${revision}</version>
 
   <properties>
+    <revision>${activemq-web-console.tesb.version}</revision>
     <jetty.port>8080</jetty.port>
     <jetty.maven.groupid>org.eclipse.jetty</jetty.maven.groupid>
   </properties>
@@ -260,14 +262,17 @@
     <dependency>
       <groupId>org.slf4j</groupId>
       <artifactId>slf4j-api</artifactId>
+      <version>${slf4j.tesb.version}</version>
     </dependency>
     <dependency>
       <groupId>org.slf4j</groupId>
-      <artifactId>slf4j-log4j12</artifactId>
+      <artifactId>slf4j-reload4j</artifactId>
+      <version>${slf4j.tesb.version}</version>
     </dependency>
     <dependency>
-      <groupId>log4j</groupId>
-      <artifactId>log4j</artifactId>
+      <groupId>ch.qos.reload4j</groupId>
+      <artifactId>reload4j</artifactId>
+      <version>${reload4j.tesb.version}</version>
     </dependency>
 
     <!-- JSTL support -->
@@ -302,6 +307,12 @@
       <artifactId>activemq-unit-tests</artifactId>
       <scope>test</scope>
       <type>test-jar</type>
+      <exclusions>
+          <exclusion>
+              <groupId>log4j</groupId>
+              <artifactId>log4j</artifactId>
+          </exclusion>
+      </exclusions>
     </dependency>
     <dependency>
       <groupId>${project.groupId}</groupId>
