--- a/pom.xml
+++ b/pom.xml
@@ -38,14 +38,15 @@
     <!-- base url for site deployment.  See distribution management for full url.  Override this in settings.xml for staging -->
     <staging.siteURL>scp://people.apache.org/x1/www/activemq.apache.org</staging.siteURL>
 
-    <activemq-karaf.features.tesb.version>5.15.15.tesb3</activemq-karaf.features.tesb.version>
+    <activemq-karaf.features.tesb.version>5.15.15.tesb4</activemq-karaf.features.tesb.version>
     <activemq-web-console.tesb.version>5.15.15.tesb1</activemq-web-console.tesb.version>
-    <jackson.tesb.version>2.11.4</jackson.tesb.version>
-    <jackson.databind.tesb.version>2.11.4</jackson.databind.tesb.version>
+    <jackson.tesb.version>2.13.2</jackson.tesb.version>
+    <jackson.databind.tesb.version>2.13.2.2</jackson.databind.tesb.version>
     <xstream-bundle.tesb.version>1.4.19_1</xstream-bundle.tesb.version>
     <xstream.tesb.version>1.4.19</xstream.tesb.version>
     <slf4j.tesb.version>1.7.36</slf4j.tesb.version>
     <reload4j.tesb.version>1.2.19</reload4j.tesb.version>
+    <spring-tesb-version-range>[5.2,6)</spring-tesb-version-range>
 
     <!-- JAR dependency versions -->
     <activemq-protobuf-version>1.1</activemq-protobuf-version>
@@ -1158,6 +1159,7 @@
               <xstream.tesb.version>${xstream.tesb.version}</xstream.tesb.version>
               <slf4j.tesb.version>${slf4j.tesb.version}</slf4j.tesb.version>
               <reload4j.tesb.version>${reload4j.tesb.version}</reload4j.tesb.version>
+              <spring-tesb-version-range>${spring-tesb-version-range}</spring-tesb-version-range>
             </properties>
           </configuration>
           <executions>
